P2S2 - browser update 2: width fixed vs scrollbar

--- a/apps/ftirui/ft/static/ft/app.css
+++ b/apps/ftirui/ft/static/ft/app.css
@@ -3597,6 +3597,7 @@ pre, code, .pre-like {
   padding: .5rem;
   overflow: auto;
   position: relative;
+  scrollbar-gutter: stable;
 }
 
 .panel-body.dragover{
